--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="370.0" prefWidth="482.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
+<VBox prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
       <Label prefHeight="39.0" prefWidth="219.0" text="Seller Registration">
          <font>
@@ -27,12 +27,15 @@
           <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAction" text="New" />
         </items>
       </ToolBar>
-      <TableView fx:id="tableViewSeller" prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tableViewSeller" prefHeight="252.0" prefWidth="423.0">
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
-          <TableColumn fx:id="tableColumnName" prefWidth="125.0" text="Name" />
-            <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
-            <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
+          <TableColumn fx:id="tableColumnName" prefWidth="85.0" text="Name" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="113.0" text="Email" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="90.0" text="Birth Date" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="90.0" text="Base Salary" />
+            <TableColumn fx:id="tableColumnEDIT" minWidth="0.0" prefWidth="70.0" />
+            <TableColumn fx:id="tableColumnREMOVE" minWidth="0.0" prefWidth="70.0" />
         </columns>
       </TableView>
    </children>
